--- a/devopsbuddy/src/main/resources/i18n/messages.properties
+++ b/devopsbuddy/src/main/resources/i18n/messages.properties
@@ -12,6 +12,16 @@ index.pro.signup.button=Sign up with Pro
 # This is the about section
 navbar.about.text=About
 navbar.home.text=Home
+navbar.contact.text=Contact Us
+
+# The contact form section
+contact.h1.text=We value your feedback
+contact.p.lead=Please let us know what you think
+form.email=Email
+form.firstname=First Name
+form.lastname=Last Name
+contact.feedback.form.text=Your Feedback
+form.submit=Submit
 
 # This is the copy section
 copy.h1.text=Who we are
