--- a/devopsbuddy/src/main/resources/i18n/messages.properties
+++ b/devopsbuddy/src/main/resources/i18n/messages.properties
@@ -13,6 +13,7 @@ index.pro.signup.button=Sign up with Pro
 navbar.about.text=About
 navbar.home.text=Home
 navbar.contact.text=Contact Us
+navbar.login.text=Log in
 
 # The contact form section
 contact.h1.text=We value your feedback
@@ -34,3 +35,11 @@ copy.project.lead.intro=I am an experienced leader in delivering Quality Softwar
   more pre-emptive methodologies such as UP and Waterfall. I have got a long proven track of turning difficult \
   projects  into success stories and in re-gaining business trust in difficult situations.
 copy.viewdetails.button=View details >>
+
+# This is the login form section
+login.h1.text=Please Sign In
+login.p.lead=Please Sign In to access DevOps great features!
+login.username.text=Username
+login.password.text=Password
+login.error.message=An error occurred while logging in
+login.logout.success=You've successfully logged out
