--- a/devopsbuddy/src/main/resources/i18n/messages.properties
+++ b/devopsbuddy/src/main/resources/i18n/messages.properties
@@ -14,6 +14,7 @@ navbar.about.text=About
 navbar.home.text=Home
 navbar.contact.text=Contact Us
 navbar.login.text=Log in
+navbar.logout.text=Log out
 
 # The contact form section
 contact.h1.text=We value your feedback
@@ -43,3 +44,8 @@ login.username.text=Username
 login.password.text=Password
 login.error.message=An error occurred while logging in
 login.logout.success=You've successfully logged out
+
+# This is the payload section
+payload.h1.text=You've got the juice!
+payload.p.lead=If you can see this page it means you're logged in
+login.forgot.password.text=Forgot Your Password?
