--- a/devopsbuddy/src/main/resources/i18n/messages.properties
+++ b/devopsbuddy/src/main/resources/i18n/messages.properties
@@ -13,17 +13,8 @@ index.pro.signup.button=Sign up with Pro
 navbar.about.text=About
 navbar.home.text=Home
 navbar.contact.text=Contact Us
-navbar.login.text=Log in
-navbar.logout.text=Log out
-
-# The contact form section
-contact.h1.text=We value your feedback
-contact.p.lead=Please let us know what you think
-form.email=Email
-form.firstname=First Name
-form.lastname=Last Name
-contact.feedback.form.text=Your Feedback
-form.submit=Submit
+navbar.login.text=Log In
+navbar.logout.text=Logout
 
 # This is the copy section
 copy.h1.text=Who we are
@@ -37,6 +28,15 @@ copy.project.lead.intro=I am an experienced leader in delivering Quality Softwar
   projects  into success stories and in re-gaining business trust in difficult situations.
 copy.viewdetails.button=View details >>
 
+# The contact form section
+contact.h1.text=We value your feedback
+contact.p.lead=Please let us know what you think
+form.email=Email
+form.firstname=First Name
+form.lastname=Last Name
+contact.feedback.form.text=Your Feedback
+form.submit=Submit
+
 # This is the login form section
 login.h1.text=Please Sign In
 login.p.lead=Please Sign In to access DevOps great features!
@@ -44,8 +44,19 @@ login.username.text=Username
 login.password.text=Password
 login.error.message=An error occurred while logging in
 login.logout.success=You've successfully logged out
-
 # This is the payload section
 payload.h1.text=You've got the juice!
 payload.p.lead=If you can see this page it means you're logged in
 login.forgot.password.text=Forgot Your Password?
+# Forgot My Password section
+forgotmypassword.message.sent.success=If there is a user for the email that you have entered, we have sent them a password reset email.
+forgotmypassword.fill.in.form.below=Please fill in the form below
+forgotmypassword.submit.text=Send Password Reset Email
+forgotmypassword.email.text=Please click on the link below to reset your password
+resetPassword.success.message=Your password has been successfully set
+resetPassword.p.lead=Enter your new password
+resetPassword.token.expired=Your token has expired. Please visit the Forgot My Password link again.
+resetPassword.token.invalid=The URL that you have clicked doesn't appear to be valid
+
+# This is the signup section
+signup.form.confirm.password=Confirm Password
